# fast-raytracing-wgpu

./: .gitignore  Cargo.toml  LICENSE  README.md  init.sh  run.sh
.cargo/: config.toml
src/: blit.wgsl  blit1.wgsl  camera.rs  geometry.rs  main.rs  post.wgsl  renderer.rs  resolve.wgsl  scene.rs  screenshot.rs  shader.wgsl  state.rs  wgpu_ctx.rs  wgpu_utils.rs
src/passes/: blit.rs  gbuffer.rs  mod.rs  post.rs  raytrace.rs  restir.rs  restir_spatial.rs  shade.rs
src/scene/: builder.rs  light.rs  loader.rs  material.rs  mod.rs  resources.rs  scenes.rs
src/shaders/: blit.wgsl  gbuffer.wgsl  post.wgsl  raytrace.wgsl  restir.wgsl  restir_spatial.wgsl  shade.wgsl
