[package]
name = "fast-raytracing-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
# ウィンドウ作成とイベント管理
winit = "0.30"
wgpu = { version = "28.0.0" }
pollster = "0.4.0"
# ログ出力用（デバッグに必須）
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
glam = "0.30"
image = "0.25.9"
chrono = "0.4.42"
oidn = { version = "2.3.3", optional = true }
rayon = "1.11.0"
anyhow = "1.0.100"
gltf = "1.4.1"

[features]
# デフォルトでAIを有効にするならここに追加。無効にするなら空にする。
default = [] 

# "ai-denoise" フラグが有効なときだけ、oidnクレートを有効化する
ai-denoise = ["dep:oidn"]
